# ai4s

./: .pre-commit-config.yaml  pyproject.toml
ai4s/: __main__.py  idea.py
