[project]
name = "ai4s"
version = "0.1.0"
description = "The AI for Scientist: Towards Fully Automated Open-Ended Scientific Discovery 🧑‍🔬"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
dependencies = [
    "anthropic",
    "aider-chat",
    "backoff",
    "openai",
    "google-generativeai",
    "matplotlib",
    "pypdf",
    "pymupdf4llm",
    "torch",
    "numpy",
    "transformers",
    "datasets",
    "tiktoken",
    "wandb>=0.19.9",
    "tqdm",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
openalex = [
    "pyalex",
]
full = ["ai4s[openalex]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ai_scientist"]
